--- a/plactic_nn_2/truly_plastic_nn.ipynb
+++ b/plactic_nn_2/truly_plastic_nn.ipynb
@@ -31,11 +31,9 @@
     "    return x\n",
     "    \n",
     "def d_ReLU(x):\n",
-    "    #print('d_ReLU: ', x)\n",
     "    y=x.copy()\n",
     "    y[y<=0] = 0\n",
     "    y[y>0] = 1\n",
-    "    #print('d_ReLU: ', x)\n",
     "    return y\n",
     "\n",
     "\n",
@@ -43,9 +41,7 @@
     "    return x\n",
     "\n",
     "def d_Linear(x):\n",
-    "    #print('d_Linear: ', x)\n",
     "    y = np.ones(shape=(x.shape), dtype = x.dtype)\n",
-    "    #print('d_Linear: ', y)\n",
     "    return y\n",
     "\n",
     "activations_dict = {\n",
@@ -57,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "42278612-f311-452d-93eb-c6ce6785a2e7",
    "metadata": {},
    "outputs": [],
@@ -98,7 +94,7 @@
     "        if (to_print): \n",
     "            print('+ bias ',s.neurons)\n",
     "        s.neurons_activated = s.activate(s.neurons)\n",
-    "        #print(\"s.input \", s.input)\n",
+    "\n",
     "        if (to_print): \n",
     "            print('s.neurons_activated ',s.neurons_activated)\n",
     "        return s.neurons_activated\n",
@@ -111,21 +107,15 @@
     "        return neurons_activated\n",
     "\n",
     "    def backprop(s, layer_error):\n",
-    "        #print('s.neurons_activated ', s.neurons_activated)\n",
-    "        #print('layer_error ', layer_error)\n",
     "        s.delta = layer_error * s.d_activate(s.neurons_activated)\n",
-    "        #print('s.delta ', s.delta)\n",
     "        s.prev_layer_error = np.dot(s.delta, s.weights.T)\n",
-    "        #print('s.prev_layer_error ', s.prev_layer_error)\n",
     "        return s.prev_layer_error\n",
     "        \n",
     "    def update_weights(s):\n",
-    "        #print('input in layer ', s.input.T)\n",
     "        s.input_t = s.input.T\n",
     "        s.x = s.input_t.reshape((s.input_t.shape[0], 1))\n",
     "        s.d = s.delta.reshape((1, s.delta.shape[0]))\n",
     "        s.weights += s.lr * np.dot(s.x, s.d)\n",
-    "\n",
     "        s.bias +=  s.lr * s.delta\n",
     "        \n",
     "    def print_info(s):\n",
@@ -133,22 +123,49 @@
     "        print(\"w: \", s.weights, \"\\n\")\n",
     "        print(\"b: \", s.bias, \"\\n\")\n",
     "\n",
-    "\n",
-    "        \n",
-    "        \n",
+    "              \n",
     "    def print_pic(s):\n",
     "        print_size = min(2, s.size)\n",
     "        print(\"\\n╻...\\nv...\")\n",
     "        for i in range(print_size):\n",
-    "            #if (i == print_size/2 and print_size != s.size):\n",
-    "                #print (\"--\", s.size, \"--\\t\", end='')\n",
     "            print('O\\t', end='')\n",
     "        print (\"--\", format(s.size, ' 5d') , \"--\\t\", end='')\n",
     "\n",
+    "\n",
+    "\n",
+    "    def correct_prev_size(s, new_prev_szie):\n",
+    "        dif = new_prev_szie - s.prev_size\n",
+    "        if dif > 0: # new prev is greater\n",
+    "            for i in range(dif):\n",
+    "                s.add_new_prev_size()\n",
+    "        elif dif < 0:\n",
+    "            dif*=-1\n",
+    "            for i in range(dif):\n",
+    "                s.delete_new_prev_size()\n",
+    "        s.prev_size = new_prev_szie\n",
+    "\n",
+    "\n",
+    "    def delete_neuron(s, neuron_number):\n",
+    "        s.weights = np.delete(s.weights, neuron_number, axis = 1)\n",
+    "        s.bias = np.delete(s.bias, neuron_number, axis = 0)\n",
+    "        s.size-=1\n",
+    "        \n",
+    "    def delete_new_prev_size(s):     \n",
+    "        s.weights = np.delete(s.weights, 0, axis = 0)\n",
+    "        s.prev_size -=1\n",
+    "\n",
+    "\n",
     "    def add_neuron(s):     \n",
-    "        add_w = np.zeros(shape=(s.prev_size, 1), dtype=float) + 0.1\n",
-    "        s.weights = np.concatenate((s.weights, add_w.T))\n",
+    "        add_w = np.zeros(shape=(s.prev_size, 1), dtype=float) + 0.1 # np.random.random((s.prev_size, n_of_neurons)) #\n",
+    "        s.weights = np.concatenate((s.weights.T, add_w.T)).T\n",
+    "        add_b = np.zeros(shape=(1), dtype=float) + 0.1 \n",
+    "        s.bias = np.concatenate((s.bias, add_b))\n",
     "        s.size+=1\n",
+    "\n",
+    "    def add_new_prev_size(s):     \n",
+    "        add_w = np.zeros(shape=(1, s.size), dtype=float) + 0.1\n",
+    "        s.weights = np.concatenate((s.weights, add_w))\n",
+    "        s.prev_size += 1\n",
     "\n",
     "    def get_info(s):\n",
     "        return s.prev_size, s.size, s.weights, s.bias, s.activation_type, s.lr\n",
@@ -157,34 +174,43 @@
     "class input_layer:\n",
     "    def __init__(s, size):\n",
     "        s.size = size\n",
-    "        s.values = np.zeros(shape=(size), dtype = float)\n",
+    "        #s.values = np.zeros(shape=(size), dtype = float)\n",
+    "    \n",
+    "    def add_neuron(s):\n",
+    "        #add_v = np.zeros(shape=(n_of_neurons), dtype=float)\n",
+    "        #s.values = np.concatenate((s.values, add_v.T))\n",
+    "        s.size += 1\n",
     "\n",
+    "    def delete_neuron(s, neuron_number):\n",
+    "        s.size-=1\n",
+    "        \n",
+    "    def delete_new_prev_size(s):     \n",
+    "        return\n",
+    "\n",
+    "\n",
+    "    def add_new_prev_size(s):     \n",
+    "        return\n",
+    "\n",
+    "        \n",
     "    def print_info(s):\n",
     "        print(\"IN LAYER\\nsize: \", s.size)\n",
-    "        #print(s.values)\n",
-    "    \n",
     "\n",
+    "    \n",
     "    def print_pic(s):\n",
     "        print_size = min(2, s.size)\n",
     "\n",
-    "        for i in range(print_size):\n",
-    "            #if (i == print_size/2 and print_size != s.size):\n",
-    "                #print (\"--\", s.size, \"--\\t\", end='')\n",
-    "                \n",
+    "        for i in range(print_size): \n",
     "            print(\"| |\\t\", end='')\n",
     "        print(\"\")\n",
     "        for i in range(print_size):\n",
-    "            #if (i == print_size/2 and print_size != s.size):\n",
-    "                #print (\"--\", s.size, \"--\\t\", end='')\n",
     "            print(\" v \\t\", end='')\n",
     "        print(\"\")\n",
     "        for i in range(print_size):\n",
-    "            #if (i == print_size/2 and print_size != s.size):\n",
-    "                #print (\"--\", s.size, \"--\\t\", end='')\n",
     "            print(' @\\t', end='')\n",
     "        print (\"--\", format(s.size, ' 5d') , \"--\\t\", end='')\n",
     "\n",
-    "    def forward(s, x):\n",
+    "    def forward(s, x, to_print = False):\n",
+    "        s.values = x\n",
     "        return x\n",
     "        \n",
     "    def forward_nu(s, x):\n",
@@ -198,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "id": "1b5958be-6ee5-4b92-9c34-7a695b81f7f5",
    "metadata": {},
    "outputs": [],
@@ -220,17 +246,18 @@
     "    def deep_copy(s):\n",
     "        return copy.deepcopy(s)\n",
     "\n",
-    "    def forward(s, data):\n",
+    "    \n",
+    "    def forward(s, data, to_print = False):\n",
     "        for lay in s.layers:\n",
-    "            data = lay.forward(data)\n",
+    "            data = lay.forward(data, to_print)\n",
     "        s.last_result = data\n",
     "        return s.last_result\n",
     "        \n",
-    "    def forward_print(s, data):\n",
+    "    def forward_print(s, data, to_print = False):\n",
     "        print('in: ',data)\n",
     "        cnt = 0\n",
     "        for lay in s.layers:\n",
-    "            data = lay.forward(data)\n",
+    "            data = lay.forward(data, to_print)\n",
     "            print(cnt, ' ', data)\n",
     "            cnt+=1\n",
     "        s.last_result = data\n",
@@ -242,6 +269,7 @@
     "        last_result = data\n",
     "        return last_result\n",
     "        \n",
+    "\n",
     "    \n",
     "    def backprop(s, correct):\n",
     "        err = correct-s.last_result\n",
@@ -252,8 +280,6 @@
     "            cnt+=1\n",
     "\n",
     "    def backprop_error(s, err):\n",
-    "        #err = correct-s.last_result\n",
-    "\n",
     "        for lay in reversed(s.layers[1:]):\n",
     "            err = lay.backprop(err)\n",
     "\n",
@@ -265,11 +291,16 @@
     "            lay.update_weights()\n",
     "            #print('\\n')\n",
     "\n",
+    "\n",
+    "    \n",
     "    def learn_one(s, in_data, target_data):\n",
     "        pnn.forward(in_data)\n",
     "        pnn.backprop(target_data)\n",
     "        pnn.update_w()   \n",
-    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
     "    def append_one(s, new_layer, check = False):\n",
     "        if check and s.n_of_layers!=0:\n",
     "            last_layer_size = s.layers[-1].size\n",
@@ -278,7 +309,7 @@
     "                return\n",
     "        s.layers.append(new_layer)\n",
     "        s.n_of_layers+=1\n",
-    "        pass\n",
+    "        return\n",
     "\n",
     "    def check_layers_sizes(s, check_layers):\n",
     "        for i in range(1, len(check_layers)):\n",
@@ -286,12 +317,13 @@
     "                print(\"error between \", i-1, \"and \", i)\n",
     "                return False\n",
     "        return True\n",
-    "        \n",
-    "    def append(s, new_layers):\n",
+    "\n",
+    "    \n",
+    "    def append_layers(s, new_layers):\n",
     "        test_layers = np.array([])\n",
     "        if s.n_of_layers != 0: # if has layers\n",
     "            test_layers = s.layers[-1] # get last layers\n",
-    "        print(s.n_of_layers)\n",
+    "        \n",
     "        test_layers = np.append(test_layers, new_layers) \n",
     "                \n",
     "        if (s.check_layers_sizes(test_layers)):\n",
@@ -303,6 +335,79 @@
     "            print(\"ERROR adding layers, check info above\")\n",
     "            return False\n",
     "\n",
+    "    def add_layer_by_pos(s, pos, new_layer):\n",
+    "        if (pos <= 0 or pos > s.n_of_layers): # if input or more than 'to last'\n",
+    "            print(\"ERROR addning layer: invalid layer number!\")\n",
+    "            if (pos == 0):\n",
+    "                print(\"input layer cannot be replaced by different layer\")\n",
+    "            return\n",
+    "            \n",
+    "        if (pos == s.n_of_layers): # if add to the last\n",
+    "            s.append(new_layer)\n",
+    "            return\n",
+    "            \n",
+    "        if (new_layer.prev_size!=s.layers[pos-1].size):\n",
+    "            print(\"ERROR addning layer: invalid prev_size!\")\n",
+    "            return \n",
+    "            \n",
+    "        s.layers.insert(pos, new_layer)\n",
+    "        prev_size = new_layer.size\n",
+    "        \n",
+    "        # update next layer prev_size and w matrix\n",
+    "        next_lay = s.layers[pos+1]\n",
+    "        next_lay.correct_prev_size(prev_size)\n",
+    "        s.n_of_layers += 1\n",
+    "\n",
+    "    def delete_layer_by_pos(s, pos):\n",
+    "        if (pos <= 0 or pos >= s.n_of_layers): # if input or more than 'to last'\n",
+    "            print(\"ERROR deleting layer: invalid layer number!\")\n",
+    "            if (pos == 0):\n",
+    "                print(\"input layer cannot be deleted\")\n",
+    "            return\n",
+    "        \n",
+    "        new_prev_size = s.layers[pos].prev_size \n",
+    "        if (pos != s.n_of_layers-1): #if not last\n",
+    "            next_lay = s.layers[pos+1]\n",
+    "            next_lay.correct_prev_size(new_prev_size)\n",
+    "\n",
+    "        del s.layers[pos]\n",
+    "        s.n_of_layers -= 1\n",
+    "\n",
+    "\n",
+    "    def add_neuron(s, layer_number, n_of_neurons = 1):\n",
+    "        if (layer_number < 0 or layer_number>= s.n_of_layers):\n",
+    "            print(\"ERROR addning neuron: invalid layer number!\")\n",
+    "            return\n",
+    "        \n",
+    "        main_lay = s.layers[layer_number]  \n",
+    "        \n",
+    "        for i in range(n_of_neurons):\n",
+    "            main_lay.add_neuron()           \n",
+    "            if (layer_number+1 != s.n_of_layers): # if main is not last\n",
+    "                # update next layer prev_size and w matrix\n",
+    "                next_lay = s.layers[layer_number+1]\n",
+    "                next_lay.add_new_prev_size()\n",
+    "    \n",
+    "    def delete_neuron(s, layer_number, neuron_number):\n",
+    "        if (layer_number < 0 or layer_number>= s.n_of_layers):\n",
+    "            print(\"ERROR deleting neuron: invalid layer number!\")\n",
+    "            return\n",
+    "            \n",
+    "        main_lay = s.layers[layer_number] \n",
+    "        \n",
+    "        if (neuron_number >= main_lay.size):\n",
+    "            print(\"ERROR deleting neuron: invalid neuron number!\")\n",
+    "            return\n",
+    "\n",
+    "        main_lay.delete_neuron(neuron_number)\n",
+    "        if (layer_number+1 != s.n_of_layers): # if main is not last\n",
+    "                # update next layer prev_size and w matrix\n",
+    "                next_lay = s.layers[layer_number+1]\n",
+    "                next_lay.delete_new_prev_size()\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "    \n",
     "    def print_info(s):\n",
     "        print('NAME: ', s.name, ' (', s.n_of_layers, ')')\n",
     "        for cnt in range(s.n_of_layers):\n",
@@ -319,6 +424,7 @@
     "            cnt+=1\n",
     "        print(\"\\nOUT |#|\\nOUT  v\")\n",
     "\n",
+    "    \n",
     "    def save(s, file_path):       \n",
     "        f = open(file_path, \"w\").close()\n",
     "        \n",
@@ -336,8 +442,7 @@
     "            np.savetxt(f, bias)#, fmt='%f')\n",
     "            f.write(\"{}\\n\".format(activation_type))\n",
     "            f.write(\"{}\\n\".format(lr))\n",
-    "            \n",
-    "        \n",
+    "                 \n",
     "        f.close()\n",
     "\n",
     "        \n",
@@ -370,7 +475,211 @@
     "        s.append(layers)             \n",
     "        f.close()\n",
     "\n",
+    "\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "bdc72dc6-3659-456f-98ba-beb840358f48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "added LAYERS succesfully\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(5)\n",
+    "in_states = 2\n",
+    "h1_nodes = 3\n",
+    "h2_nodes = 5\n",
+    "out_actions = 3\n",
+    "learning_rate_a = 0.1\n",
+    "layers_net = [input_layer(in_states), \n",
+    "layer(lr = learning_rate_a, prev_size = in_states, my_size=h1_nodes, activation_type=\"ReLU\"), \n",
+    "layer(lr = learning_rate_a, prev_size = h1_nodes, my_size=out_actions, activation_type='Linear')]\n",
+    "\n",
+    "policy_dqn = plastic_nn()\n",
+    "policy_dqn.append_layers(layers_net)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "dd57e3d8-5d39-4c59-b48f-8f8dc0b65aa1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME:  noname  ( 3 )\n",
+      "| |\t| |\t\n",
+      " v \t v \t\n",
+      " @\t @\t--     2 --\t# 0\n",
+      "╻...\n",
+      "v...\n",
+      "O\tO\t--     3 --\t# 1\n",
+      "╻...\n",
+      "v...\n",
+      "O\tO\t--     3 --\t# 2\n",
+      "OUT |#|\n",
+      "OUT  v\n"
+     ]
+    }
+   ],
+   "source": [
+    "policy_dqn.print_pic()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b1c8f81a-bd08-49cc-a569-0b6d1246b09f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "policy_dqn.add_neuron(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cbb80b1a-6314-4068-a91e-6f899b689312",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME:  noname  ( 3 )\n",
+      "| |\t| |\t\n",
+      " v \t v \t\n",
+      " @\t @\t--     3 --\t# 0\n",
+      "╻...\n",
+      "v...\n",
+      "O\tO\t--     4 --\t# 1\n",
+      "╻...\n",
+      "v...\n",
+      "O\tO\t--     4 --\t# 2\n",
+      "OUT |#|\n",
+      "OUT  v\n"
+     ]
+    }
+   ],
+   "source": [
+    "policy_dqn.print_pic()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "6e13e54d-6dcf-4f32-b0e9-71c9ade6253a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nl= layer(lr = learning_rate_a, prev_size = 2, my_size=4, activation_type=\"ReLU\")\n",
+    "policy_dqn.add_layer_by_pos(1, nl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "ca2a5757-2715-4322-9ed5-aa3970eb313c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME:  noname  ( 5 )\n",
+      "| |\t| |\t\n",
+      " v \t v \t\n",
+      " @\t @\t--     2 --\t# 0\n",
+      "╻...\n",
+      "v...\n",
+      "O\tO\t--     4 --\t# 1\n",
+      "╻...\n",
+      "v...\n",
+      "O\tO\t--     3 --\t# 2\n",
+      "╻...\n",
+      "v...\n",
+      "O\tO\t--     3 --\t# 3\n",
+      "╻...\n",
+      "v...\n",
+      "O\tO\t--     3 --\t# 4\n",
+      "OUT |#|\n",
+      "OUT  v\n"
+     ]
+    }
+   ],
+   "source": [
+    "policy_dqn.print_pic()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "e65a0a89-98d3-417e-bd2a-2028ebc2b767",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policy_dqn.delete_layer_by_pos(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "da0e34b6-6deb-4fcb-b569-f32ceb3edc09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME:  noname  ( 4 )\n",
+      "| |\t| |\t\n",
+      " v \t v \t\n",
+      " @\t @\t--     2 --\t# 0\n",
+      "╻...\n",
+      "v...\n",
+      "O\tO\t--     4 --\t# 1\n",
+      "╻...\n",
+      "v...\n",
+      "O\tO\t--     3 --\t# 2\n",
+      "╻...\n",
+      "v...\n",
+      "O\tO\t--     3 --\t# 3\n",
+      "OUT |#|\n",
+      "OUT  v\n"
+     ]
+    }
+   ],
+   "source": [
+    "policy_dqn.print_pic()"
    ]
   }
  ],
