--- a/plactic_nn_2/truly_plastic_nn.ipynb
+++ b/plactic_nn_2/truly_plastic_nn.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "42278612-f311-452d-93eb-c6ce6785a2e7",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "id": "1b5958be-6ee5-4b92-9c34-7a695b81f7f5",
    "metadata": {},
    "outputs": [],
@@ -294,9 +294,9 @@
     "\n",
     "    \n",
     "    def learn_one(s, in_data, target_data):\n",
-    "        pnn.forward(in_data)\n",
-    "        pnn.backprop(target_data)\n",
-    "        pnn.update_w()   \n",
+    "        s.forward(in_data)\n",
+    "        s.backprop(target_data)\n",
+    "        s.update_w()   \n",
     "\n",
     "\n",
     "\n",
@@ -482,204 +482,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "id": "bdc72dc6-3659-456f-98ba-beb840358f48",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "added LAYERS succesfully\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.random.seed(5)\n",
-    "in_states = 2\n",
-    "h1_nodes = 3\n",
-    "h2_nodes = 5\n",
-    "out_actions = 3\n",
-    "learning_rate_a = 0.1\n",
-    "layers_net = [input_layer(in_states), \n",
-    "layer(lr = learning_rate_a, prev_size = in_states, my_size=h1_nodes, activation_type=\"ReLU\"), \n",
-    "layer(lr = learning_rate_a, prev_size = h1_nodes, my_size=out_actions, activation_type='Linear')]\n",
+    "# np.random.seed(5)\n",
+    "# in_states = 2\n",
+    "# h1_nodes = 3\n",
+    "# h2_nodes = 5\n",
+    "# out_actions = 3\n",
+    "# learning_rate_a = 0.1\n",
+    "# layers_net = [input_layer(in_states), \n",
+    "# layer(lr = learning_rate_a, prev_size = in_states, my_size=h1_nodes, activation_type=\"ReLU\"), \n",
+    "# layer(lr = learning_rate_a, prev_size = h1_nodes, my_size=out_actions, activation_type='Linear')]\n",
     "\n",
-    "policy_dqn = plastic_nn()\n",
-    "policy_dqn.append_layers(layers_net)\n",
+    "# policy_dqn = plastic_nn()\n",
+    "# policy_dqn.append_layers(layers_net)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "id": "dd57e3d8-5d39-4c59-b48f-8f8dc0b65aa1",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME:  noname  ( 3 )\n",
-      "| |\t| |\t\n",
-      " v \t v \t\n",
-      " @\t @\t--     2 --\t# 0\n",
-      "╻...\n",
-      "v...\n",
-      "O\tO\t--     3 --\t# 1\n",
-      "╻...\n",
-      "v...\n",
-      "O\tO\t--     3 --\t# 2\n",
-      "OUT |#|\n",
-      "OUT  v\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "policy_dqn.print_pic()"
+    "# policy_dqn.print_pic()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "b1c8f81a-bd08-49cc-a569-0b6d1246b09f",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "policy_dqn.add_neuron(2)"
+    "# policy_dqn.add_neuron(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "cbb80b1a-6314-4068-a91e-6f899b689312",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME:  noname  ( 3 )\n",
-      "| |\t| |\t\n",
-      " v \t v \t\n",
-      " @\t @\t--     3 --\t# 0\n",
-      "╻...\n",
-      "v...\n",
-      "O\tO\t--     4 --\t# 1\n",
-      "╻...\n",
-      "v...\n",
-      "O\tO\t--     4 --\t# 2\n",
-      "OUT |#|\n",
-      "OUT  v\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "policy_dqn.print_pic()"
+    "# policy_dqn.print_pic()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "id": "6e13e54d-6dcf-4f32-b0e9-71c9ade6253a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nl= layer(lr = learning_rate_a, prev_size = 2, my_size=4, activation_type=\"ReLU\")\n",
-    "policy_dqn.add_layer_by_pos(1, nl)"
+    "# nl= layer(lr = learning_rate_a, prev_size = 2, my_size=4, activation_type=\"ReLU\")\n",
+    "# policy_dqn.add_layer_by_pos(1, nl)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "id": "ca2a5757-2715-4322-9ed5-aa3970eb313c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME:  noname  ( 5 )\n",
-      "| |\t| |\t\n",
-      " v \t v \t\n",
-      " @\t @\t--     2 --\t# 0\n",
-      "╻...\n",
-      "v...\n",
-      "O\tO\t--     4 --\t# 1\n",
-      "╻...\n",
-      "v...\n",
-      "O\tO\t--     3 --\t# 2\n",
-      "╻...\n",
-      "v...\n",
-      "O\tO\t--     3 --\t# 3\n",
-      "╻...\n",
-      "v...\n",
-      "O\tO\t--     3 --\t# 4\n",
-      "OUT |#|\n",
-      "OUT  v\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "policy_dqn.print_pic()"
+    "# policy_dqn.print_pic()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "id": "e65a0a89-98d3-417e-bd2a-2028ebc2b767",
    "metadata": {},
    "outputs": [],
    "source": [
-    "policy_dqn.delete_layer_by_pos(4)"
+    "# policy_dqn.delete_layer_by_pos(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "id": "da0e34b6-6deb-4fcb-b569-f32ceb3edc09",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME:  noname  ( 4 )\n",
-      "| |\t| |\t\n",
-      " v \t v \t\n",
-      " @\t @\t--     2 --\t# 0\n",
-      "╻...\n",
-      "v...\n",
-      "O\tO\t--     4 --\t# 1\n",
-      "╻...\n",
-      "v...\n",
-      "O\tO\t--     3 --\t# 2\n",
-      "╻...\n",
-      "v...\n",
-      "O\tO\t--     3 --\t# 3\n",
-      "OUT |#|\n",
-      "OUT  v\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "policy_dqn.print_pic()"
+    "# policy_dqn.print_pic()"
    ]
   }
  ],
