--- a/plactic_nn_2/test.ipynb
+++ b/plactic_nn_2/test.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "1705bd04-4a7e-4aa5-9c15-9ad6a821feb2",
    "metadata": {},
    "outputs": [
@@ -243,16 +243,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.00954719]\n",
-      "[0.55805056]\n",
-      "[0.98972968]\n",
-      "[0.56153683]\n"
+      "[0.02490296]\n",
+      "[0.98274417]\n",
+      "[0.98033343]\n",
+      "[0.01935625]\n",
+      "[0.11164797]\n",
+      "[0.98318142]\n",
+      "[0.98005483]\n",
+      "[0.03237747]\n"
      ]
     }
    ],
    "source": [
-    "test_2_in = [[0, 0], [0,1], [1, 0], [1, 1]]\n",
-    "for i in range(4):\n",
+    "test_2_in = [[0, 0], [0,1], [1, 0], [1, 1],\n",
+    "            [0.2, 0.1], [-0.1, 1], [1.1, -0.1], [1.2, -1.1]]\n",
+    "for i in range(len(test_2_in)):\n",
     "    print(test_nn.forward(test_2_in[i]))"
    ]
   }
