--- a/plactic_nn_2/truly_plastic_nn.ipynb
+++ b/plactic_nn_2/truly_plastic_nn.ipynb
@@ -23,7 +23,7 @@
     "    return res\n",
     "\n",
     "def d_Sigmoid(x):\n",
-    "    y = x * (1 - x)\n",
+    "    y = Sigmoid(x) * (1 - Sigmoid(x))\n",
     "    return y\n",
     "\n",
     "def ReLU(x):\n",
@@ -107,7 +107,7 @@
     "        return neurons_activated\n",
     "\n",
     "    def backprop(s, layer_error):\n",
-    "        s.delta = layer_error * s.d_activate(s.neurons_activated)\n",
+    "        s.delta = layer_error * s.d_activate(s.neurons)\n",
     "        s.prev_layer_error = np.dot(s.delta, s.weights.T)\n",
     "        return s.prev_layer_error\n",
     "        \n",
