--- a/from_johnnycode8_good/from_SGDwM_test/from_test.ipynb
+++ b/from_johnnycode8_good/from_SGDwM_test/from_test.ipynb
@@ -80,43 +80,10 @@
       "WARNING: Ignoring invalid distribution -orch (c:\\users\\basil\\appdata\\roaming\\python\\python39\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -orch (c:\\users\\basil\\appdata\\roaming\\python\\python39\\site-packages)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution -orch (c:\\users\\basil\\appdata\\roaming\\python\\python39\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -orch (c:\\users\\basil\\appdata\\roaming\\python\\python39\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -orch (c:\\users\\basil\\appdata\\roaming\\python\\python39\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -orch (c:\\users\\basil\\appdata\\roaming\\python\\python39\\site-packages)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Requirement already satisfied: gymnasium[classic-control] in c:\\users\\basil\\appdata\\roaming\\python\\python39\\site-packages (0.29.1)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in c:\\program files (x86)\\microsoft visual studio\\shared\\python39_64\\lib\\site-packages (from gymnasium[classic-control]) (1.26.1)\n",
-      "Requirement already satisfied: cloudpickle>=1.2.0 in c:\\users\\basil\\appdata\\roaming\\python\\python39\\site-packages (from gymnasium[classic-control]) (3.0.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.3.0 in c:\\program files (x86)\\microsoft visual studio\\shared\\python39_64\\lib\\site-packages (from gymnasium[classic-control]) (4.8.0)\n",
-      "Requirement already satisfied: farama-notifications>=0.0.1 in c:\\users\\basil\\appdata\\roaming\\python\\python39\\site-packages (from gymnasium[classic-control]) (0.0.4)\n",
-      "Requirement already satisfied: importlib-metadata>=4.8.0 in c:\\users\\basil\\appdata\\roaming\\python\\python39\\site-packages (from gymnasium[classic-control]) (7.1.0)\n",
-      "Requirement already satisfied: pygame>=2.1.3 in c:\\users\\basil\\appdata\\roaming\\python\\python39\\site-packages (from gymnasium[classic-control]) (2.5.2)\n",
-      "Requirement already satisfied: zipp>=0.5 in c:\\program files (x86)\\microsoft visual studio\\shared\\python39_64\\lib\\site-packages (from importlib-metadata>=4.8.0->gymnasium[classic-control]) (3.17.0)\n"
-     ]
     }
    ],
    "source": [
-    "!pip install gymnasium\n",
-    "!pip install gymnasium[classic-control]"
+    "!pip install gymnasium"
    ]
   },
   {
@@ -140,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "99242b2c-e34a-4e2b-a0ce-69dc353240c2",
    "metadata": {
     "id": "99242b2c-e34a-4e2b-a0ce-69dc353240c2"
@@ -159,7 +126,6 @@
     "\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.fc1(x)) # Apply rectified linear unit (ReLU) activation\n",
-    "        #print(x)\n",
     "        x = self.out(x)         # Calculate output\n",
     "        return x\n",
     "\n",
@@ -211,11 +177,10 @@
     "        policy_dqn = DQN(in_states=num_states, h1_nodes=10, out_actions=num_actions)\n",
     "        target_dqn = DQN(in_states=num_states, h1_nodes=10, out_actions=num_actions)\n",
     "\n",
-    "        # Make the target and policy networks the same (copy weights/biases from one network to the other)\n",
+    "\n",
     "        target_dqn.load_state_dict(policy_dqn.state_dict())\n",
     "\n",
-    "        # Policy network optimizer. \"Adam\" optimizer can be swapped to something else.\n",
-    "        self.optimizer = torch.optim.Adam(policy_dqn.parameters(), lr=self.learning_rate_a)\n",
+    "        self.optimizer = torch.optim.Adam(policy_dqn.parameters(), lr=self.learning_rate_a) #SGD(policy_dqn.parameters(), lr=self.learning_rate_a, momentum=0.9)#\n",
     "\n",
     "        # List to keep track of rewards collected per episode. Initialize list to 0's.\n",
     "        rewards_per_episode = []\n",
@@ -280,7 +245,7 @@
     "                torch.save(policy_dqn.state_dict(), f\"mountaincar_dql_{i}.pt\")\n",
     "\n",
     "            # Check if enough experience has been collected\n",
-    "            if len(memory)>self.mini_batch_size:# and goal_reached:\n",
+    "            if len(memory)>self.mini_batch_size and goal_reached:\n",
     "                mini_batch = memory.sample(self.mini_batch_size)\n",
     "                self.optimize(mini_batch, policy_dqn, target_dqn)\n",
     "\n",
@@ -313,6 +278,7 @@
     "\n",
     "        # Save plots\n",
     "        plt.savefig('mountaincar_dql.png')\n",
+    "        \n",
     "    # Optimize policy network\n",
     "    def optimize(self, mini_batch, policy_dqn, target_dqn):\n",
     "\n",
@@ -342,13 +308,14 @@
     "            target_q[action] = target\n",
     "            target_q_list.append(target_q)\n",
     "\n",
-    "        # Compute loss for the whole minibatch\n",
-    "        loss = self.loss_fn(torch.stack(current_q_list), torch.stack(target_q_list))\n",
-    "        #print(loss)\n",
-    "        # Optimize the model\n",
-    "        self.optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        self.optimizer.step()\n",
+    "            # Compute loss for the whole minibatch\n",
+    "            loss = self.loss_fn(current_q, target_q)\n",
+    "            # loss = self.loss_fn(torch.stack(current_q_list), torch.stack(target_q_list))\n",
+    "    \n",
+    "            # Optimize the model\n",
+    "            self.optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            self.optimizer.step()\n",
     "\n",
     "    '''\n",
     "    Converts a state (position, velocity) to tensor representation.\n",
@@ -386,29 +353,17 @@
     "            while(not terminated and not truncated):\n",
     "                # Select best action\n",
     "                with torch.no_grad():\n",
-    "                    var = policy_dqn(self.state_to_dqn_input(state))\n",
-    "                    print(var)\n",
-    "                    action = var.argmax().item()\n",
+    "                    action = policy_dqn(self.state_to_dqn_input(state)).argmax().item()\n",
     "\n",
     "                # Execute action\n",
     "                state,reward,terminated,truncated,_ = env.step(action)\n",
     "\n",
-    "        env.close()\n",
-    "\n",
-    "     # Run the environment with the learned policy\n",
-    "    def print(self, model_filepath):\n",
-    "       \n",
-    "        # Load learned policy\n",
-    "        policy_dqn = DQN(in_states=2, h1_nodes=10, out_actions=3)\n",
-    "        policy_dqn.load_state_dict(torch.load(model_filepath))\n",
-    "        print(policy_dqn)\n",
-    "        print(policy_dqn.fc1.weight, policy_dqn.fc1.bias) # = nn.Linear(in_states, h1_nodes)   # first fully connected layer\n",
-    "        print(policy_dqn.out.weight, policy_dqn.out.bias)\n"
+    "        env.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "f045c962-6024-43b8-8527-1376ce918872",
    "metadata": {
     "id": "f045c962-6024-43b8-8527-1376ce918872",
@@ -432,251 +387,32 @@
     "outputId": "5d51151e-415f-4612-c064-a8a6a337d5d1",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 1000 Epsilon 0.9675999999999676\n",
+      "Episode 2000 Epsilon 0.9275999999999276\n",
+      "Episode 3000 Epsilon 0.8875999999998876\n"
+     ]
+    }
+   ],
    "source": [
     "mountaincar.train(25000, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "71956c2f-0661-4b8c-bc5d-245dd9dfe786",
    "metadata": {
-    "id": "71956c2f-0661-4b8c-bc5d-245dd9dfe786",
-    "scrolled": true
+    "id": "71956c2f-0661-4b8c-bc5d-245dd9dfe786"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([-9.7866, -9.7891, -9.8851])\n",
-      "tensor([-9.7866, -9.7891, -9.8851])\n",
-      "tensor([-9.7866, -9.7891, -9.8851])\n",
-      "tensor([-9.7866, -9.7891, -9.8851])\n",
-      "tensor([-9.7866, -9.7891, -9.8851])\n",
-      "tensor([-9.7866, -9.7891, -9.8851])\n",
-      "tensor([ -9.8695,  -9.8759, -10.0394])\n",
-      "tensor([ -9.8695,  -9.8759, -10.0394])\n",
-      "tensor([ -9.8695,  -9.8759, -10.0394])\n",
-      "tensor([ -9.8695,  -9.8759, -10.0394])\n",
-      "tensor([ -9.8695,  -9.8759, -10.0394])\n",
-      "tensor([ -9.8695,  -9.8759, -10.0394])\n",
-      "tensor([ -9.8695,  -9.8759, -10.0394])\n",
-      "tensor([ -9.8695,  -9.8759, -10.0394])\n",
-      "tensor([ -9.8695,  -9.8759, -10.0394])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([ -9.9546,  -9.9623, -10.1413])\n",
-      "tensor([-10.0398, -10.0487, -10.2432])\n",
-      "tensor([-10.0398, -10.0487, -10.2432])\n",
-      "tensor([-10.0398, -10.0487, -10.2432])\n",
-      "tensor([-10.0398, -10.0487, -10.2432])\n",
-      "tensor([-10.0398, -10.0487, -10.2432])\n",
-      "tensor([-10.0398, -10.0487, -10.2432])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([ -9.9569,  -9.9619, -10.0889])\n",
-      "tensor([-9.8740, -9.8751, -9.9346])\n",
-      "tensor([-9.8740, -9.8751, -9.9346])\n",
-      "tensor([-9.8740, -9.8751, -9.9346])\n",
-      "tensor([-9.8740, -9.8751, -9.9346])\n",
-      "tensor([-9.7889, -9.7887, -9.8327])\n",
-      "tensor([-9.7889, -9.7887, -9.8327])\n",
-      "tensor([-9.7889, -9.7887, -9.8327])\n",
-      "tensor([-9.7889, -9.7887, -9.8327])\n",
-      "tensor([-9.7060, -9.7020, -9.6784])\n",
-      "tensor([-9.7060, -9.7020, -9.6784])\n",
-      "tensor([-9.7060, -9.7020, -9.6784])\n",
-      "tensor([-9.7060, -9.7020, -9.6784])\n",
-      "tensor([-9.5380, -9.5288, -9.4221])\n",
-      "tensor([-9.5380, -9.5288, -9.4221])\n",
-      "tensor([-9.5380, -9.5288, -9.4221])\n",
-      "tensor([-9.5380, -9.5288, -9.4221])\n",
-      "tensor([-9.4528, -9.4424, -9.3202])\n",
-      "tensor([-9.3699, -9.3557, -9.1659])\n",
-      "tensor([-9.3699, -9.3557, -9.1659])\n",
-      "tensor([-9.3699, -9.3557, -9.1659])\n",
-      "tensor([-9.2848, -9.2693, -9.0640])\n",
-      "tensor([-9.2848, -9.2693, -9.0640])\n",
-      "tensor([-9.2848, -9.2693, -9.0640])\n",
-      "tensor([-9.1997, -9.1829, -8.9620])\n",
-      "tensor([-9.1997, -9.1829, -8.9620])\n",
-      "tensor([-9.1997, -9.1829, -8.9620])\n",
-      "tensor([-9.1145, -9.0965, -8.8601])\n",
-      "tensor([-9.1974, -9.1832, -9.0144])\n",
-      "tensor([-9.1974, -9.1832, -9.0144])\n",
-      "tensor([-9.1974, -9.1832, -9.0144])\n",
-      "tensor([-9.1123, -9.0968, -8.9125])\n",
-      "tensor([-9.1123, -9.0968, -8.9125])\n",
-      "tensor([-9.1123, -9.0968, -8.9125])\n",
-      "tensor([-9.1123, -9.0968, -8.9125])\n",
-      "tensor([-9.1951, -9.1836, -9.0668])\n",
-      "tensor([-9.1100, -9.0972, -8.9649])\n",
-      "tensor([-9.1100, -9.0972, -8.9649])\n",
-      "tensor([-9.1100, -9.0972, -8.9649])\n",
-      "tensor([-9.1100, -9.0972, -8.9649])\n",
-      "tensor([-9.1929, -9.1840, -9.1192])\n",
-      "tensor([-9.1929, -9.1840, -9.1192])\n",
-      "tensor([-9.1929, -9.1840, -9.1192])\n",
-      "tensor([-9.1929, -9.1840, -9.1192])\n",
-      "tensor([-9.1929, -9.1840, -9.1192])\n",
-      "tensor([-9.2757, -9.2707, -9.2735])\n",
-      "tensor([-9.2757, -9.2707, -9.2735])\n",
-      "tensor([-9.2757, -9.2707, -9.2735])\n",
-      "tensor([-9.3586, -9.3575, -9.4278])\n",
-      "tensor([-9.3586, -9.3575, -9.4278])\n",
-      "tensor([-9.3586, -9.3575, -9.4278])\n",
-      "tensor([-9.4415, -9.4443, -9.5821])\n",
-      "tensor([-9.4415, -9.4443, -9.5821])\n",
-      "tensor([-9.5244, -9.5310, -9.7364])\n",
-      "tensor([-9.6095, -9.6174, -9.8384])\n",
-      "tensor([-9.6924, -9.7042, -9.9927])\n",
-      "tensor([-9.6924, -9.7042, -9.9927])\n",
-      "tensor([ -9.7775,  -9.7906, -10.0946])\n",
-      "tensor([ -9.8604,  -9.8773, -10.2489])\n",
-      "tensor([ -9.8604,  -9.8773, -10.2489])\n",
-      "tensor([ -9.6734,  -9.6906, -10.0881])\n",
-      "tensor([ -9.6734,  -9.6906, -10.0881])\n",
-      "tensor([ -9.6542,  -9.6712, -10.0675])\n",
-      "tensor([-9.0808, -9.0928, -9.4509])\n",
-      "tensor([-9.0616, -9.0734, -9.4302])\n",
-      "tensor([-9.0616, -9.0734, -9.4302])\n",
-      "tensor([-9.0424, -9.0540, -9.4095])\n",
-      "tensor([-9.0231, -9.0346, -9.3888])\n",
-      "tensor([-9.0231, -9.0346, -9.3888])\n",
-      "tensor([-9.0039, -9.0152, -9.3681])\n",
-      "tensor([-9.0039, -9.0152, -9.3681])\n",
-      "tensor([-8.9846, -8.9958, -9.3475])\n",
-      "tensor([-8.9846, -8.9958, -9.3475])\n",
-      "tensor([-8.9654, -8.9763, -9.3268])\n",
-      "tensor([-8.9654, -8.9763, -9.3268])\n",
-      "tensor([-9.5195, -9.5354, -9.9226])\n",
-      "tensor([-9.5195, -9.5354, -9.9226])\n",
-      "tensor([-9.5003, -9.5160, -9.9020])\n",
-      "tensor([-9.5003, -9.5160, -9.9020])\n",
-      "tensor([-10.2975, -10.3075, -10.4966])\n",
-      "tensor([-10.2975, -10.3075, -10.4966])\n",
-      "tensor([-10.2975, -10.3075, -10.4966])\n",
-      "tensor([-10.2146, -10.2207, -10.3423])\n",
-      "tensor([-10.2146, -10.2207, -10.3423])\n",
-      "tensor([-10.2146, -10.2207, -10.3423])\n",
-      "tensor([-10.2146, -10.2207, -10.3423])\n",
-      "tensor([-10.2146, -10.2207, -10.3423])\n",
-      "tensor([-10.2146, -10.2207, -10.3423])\n",
-      "tensor([-10.1317, -10.1340, -10.1880])\n",
-      "tensor([-10.1317, -10.1340, -10.1880])\n",
-      "tensor([-10.1317, -10.1340, -10.1880])\n",
-      "tensor([-10.0466, -10.0476, -10.0861])\n",
-      "tensor([-10.0466, -10.0476, -10.0861])\n",
-      "tensor([-9.9637, -9.9608, -9.9318])\n",
-      "tensor([-9.9637, -9.9608, -9.9318])\n",
-      "tensor([-9.8808, -9.8740, -9.7774])\n",
-      "tensor([-9.7957, -9.7876, -9.6755])\n",
-      "tensor([-9.7957, -9.7876, -9.6755])\n",
-      "tensor([-9.7128, -9.7009, -9.5212])\n",
-      "tensor([-9.6276, -9.6145, -9.4193])\n",
-      "tensor([-9.5448, -9.5277, -9.2650])\n",
-      "tensor([-9.4596, -9.4413, -9.1630])\n",
-      "tensor([-9.3767, -9.3546, -9.0087])\n",
-      "tensor([-9.2916, -9.2682, -8.9068])\n",
-      "tensor([-9.2916, -9.2682, -8.9068])\n",
-      "tensor([-9.2065, -9.1818, -8.8049])\n",
-      "tensor([-9.0384, -9.0086, -8.5486])\n",
-      "tensor([-9.0384, -9.0086, -8.5486])\n",
-      "tensor([-8.9533, -8.9222, -8.4467])\n",
-      "tensor([-8.9533, -8.9222, -8.4467])\n",
-      "tensor([-8.8681, -8.8358, -8.3448])\n",
-      "tensor([-8.7830, -8.7494, -8.2428])\n",
-      "tensor([-8.7830, -8.7494, -8.2428])\n",
-      "tensor([-8.6979, -8.6630, -8.1409])\n",
-      "tensor([-8.7807, -8.7498, -8.2952])\n",
-      "tensor([-8.6956, -8.6634, -8.1933])\n",
-      "tensor([-8.6105, -8.5770, -8.0914])\n",
-      "tensor([-8.6105, -8.5770, -8.0914])\n",
-      "tensor([-8.5253, -8.4906, -7.9895])\n",
-      "tensor([-8.6082, -8.5774, -8.1438])\n",
-      "tensor([-8.5230, -8.4910, -8.0418])\n",
-      "tensor([-8.5230, -8.4910, -8.0418])\n",
-      "tensor([-8.5230, -8.4910, -8.0418])\n",
-      "tensor([-8.4379, -8.4046, -7.9399])\n",
-      "tensor([-8.4379, -8.4046, -7.9399])\n",
-      "tensor([-8.3528, -8.3182, -7.8380])\n",
-      "tensor([-8.3528, -8.3182, -7.8380])\n"
-     ]
-    }
-   ],
-   "source": [
-    "mountaincar.test(1, \"mountaincar_dql_23431.pt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "5de7f5e5-a80c-4f80-8342-2327a0de9ecb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DQN(\n",
-      "  (fc1): Linear(in_features=2, out_features=10, bias=True)\n",
-      "  (out): Linear(in_features=10, out_features=3, bias=True)\n",
-      ")\n",
-      "Parameter containing:\n",
-      "tensor([[-0.1692, -0.5422],\n",
-      "        [-0.5403, -0.1118],\n",
-      "        [-0.7500, -0.0213],\n",
-      "        [-0.7580,  0.0218],\n",
-      "        [ 0.0900,  0.5659],\n",
-      "        [ 0.0203,  0.6060],\n",
-      "        [-0.2351, -0.3665],\n",
-      "        [-0.0348, -0.7156],\n",
-      "        [-0.1158, -0.5073],\n",
-      "        [-0.5872,  0.0215]], requires_grad=True) Parameter containing:\n",
-      "tensor([-0.0757, -0.6626, -0.3756,  0.2973, -3.4696,  4.5481, -0.5467, -0.2575,\n",
-      "         0.6185,  0.1723], requires_grad=True)\n",
-      "Parameter containing:\n",
-      "tensor([[-0.3058,  0.2379, -0.0113, -0.1135,  1.1597, -0.9462, -0.0374,  0.2266,\n",
-      "         -0.2753, -0.2412],\n",
-      "        [ 0.1222,  0.1303,  0.1516,  0.0678,  1.1755, -0.9546, -0.1078,  0.0779,\n",
-      "         -0.0402,  0.0219],\n",
-      "        [-0.2718,  0.3103,  0.1038,  0.0866,  1.3623, -1.0175, -0.0760,  0.2576,\n",
-      "         -0.1153,  0.0337]], requires_grad=True) Parameter containing:\n",
-      "tensor([-2.8841, -2.8413, -2.7873], requires_grad=True)\n"
-     ]
-    }
-   ],
-   "source": [
-    "mountaincar.print(\"mountaincar_dql_23431.pt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdb4f8bd-20f0-4ca2-8cf5-06597b57b6d1",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#mountaincar.test(10, \"mountaincar_dql_18302.pt\")"
+   ]
   }
  ],
  "metadata": {
