good mini batch!
with_momentum/truly_plastic_nn.ipynb

--- a/from_johnnycode8_good/from_SGDwM_test/from_test.ipynb
+++ b/from_johnnycode8_good/from_SGDwM_test/from_test.ipynb
@@ -394,7 +394,23 @@
      "text": [
       "Episode 1000 Epsilon 0.9675999999999676\n",
       "Episode 2000 Epsilon 0.9275999999999276\n",
-      "Episode 3000 Epsilon 0.8875999999998876\n"
+      "Episode 3000 Epsilon 0.8875999999998876\n",
+      "Episode 4000 Epsilon 0.8475999999998476\n",
+      "Episode 5000 Epsilon 0.8075999999998076\n",
+      "Episode 6000 Epsilon 0.7675999999997676\n",
+      "Episode 7000 Epsilon 0.7275999999997276\n",
+      "Episode 8000 Epsilon 0.6875999999996876\n",
+      "Episode 9000 Epsilon 0.6475999999996476\n",
+      "Episode 10000 Epsilon 0.6075999999996076\n",
+      "Episode 11000 Epsilon 0.5675999999995676\n",
+      "Episode 12000 Epsilon 0.5275999999995276\n",
+      "Episode 13000 Epsilon 0.4875999999995048\n",
+      "Episode 14000 Epsilon 0.4475999999995203\n",
+      "Episode 15000 Epsilon 0.40759999999953583\n",
+      "Episode 16000 Epsilon 0.36759999999955134\n",
+      "Episode 17000 Epsilon 0.32759999999956685\n",
+      "Episode 18000 Epsilon 0.28759999999958236\n",
+      "Episode 19000 Epsilon 0.24759999999959617\n"
      ]
     }
    ],
