--- a/from_johnnycode8_good/from_SGDwM_test/from_test.ipynb
+++ b/from_johnnycode8_good/from_SGDwM_test/from_test.ipynb
@@ -410,7 +410,10 @@
       "Episode 16000 Epsilon 0.36759999999955134\n",
       "Episode 17000 Epsilon 0.32759999999956685\n",
       "Episode 18000 Epsilon 0.28759999999958236\n",
-      "Episode 19000 Epsilon 0.24759999999959617\n"
+      "Episode 19000 Epsilon 0.24759999999959617\n",
+      "Episode 20000 Epsilon 0.20759999999958392\n",
+      "Episode 21000 Epsilon 0.16759999999957167\n",
+      "Episode 22000 Epsilon 0.12759999999955943\n"
      ]
     }
    ],
